Fix preview button width being too small

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
@@ -138,9 +138,13 @@ footer {
         float: left;
     }
 
-    .actions {
-        width: 250px;
+    .actions,
+    .preview {
         margin-right: $grid-gutter-width / 2;
+
+        div.dropdown {
+            width: 250px;
+        }
     }
 
     .meta {
